--- a/laurentperez.fr/talks/css1/index.html
+++ b/laurentperez.fr/talks/css1/index.html
@@ -247,7 +247,7 @@ CSS.registerProperty({
 				<p>Encore une API d'animation ?</p>
 				<small>... on a déjà CSS transitions, CSS animations (@keyframes), Web Animations API sans CSS (el.animate({...}).pause())</small>
 				<p class="fragment fade-up">NON. La Worklet est une <em>extension</em> de WAAPI qui donne un <em>Effect</em>, des <em>timelines</em> libres (dont une <em>ScrollTimeline</em>) et un état optionel (stateful)</p>
-				<p class="fragment fade-up">ex: se souvenir de l'état pour le conserver entre frames, ou quand le moteur bouge la Worklet entre threads</p>
+				<p class="fragment fade-up">ex: se souvenir de l'état pour le modifier dans le temps, ou quand le moteur bouge la Worklet entre threads</p>
 				<p class="fragment fade-up">ex: accélérer/distordre le temps (document.timeline modifiable)</p>
 				<p><a href="../waapi">demo (+ question paint flashing)</a></p>				
 			</section>
@@ -264,17 +264,23 @@ CSS.registerProperty({
 				<p>La Worklet n'est <em>PAS sur la Compositor thread</em>, elle s'y <em>sync en "best effort"</em></p>
 				<p>Car si tu fais du bitcoin dans la Worklet, ça ralentirait le Compositing</p>
 				<p>Elle va <em>au minimum</em> performer comme <em>requestAnimationFrame</em> à 60fps</p>
-				<p>Si ton animate est trop souvent &gt; 16ms (1/60), le moteur throttle, comme rAf : un 30fps fluide est meilleur qu'un 60fps qui drop</p>
+				<p class="fragment fade-up">Si ton animate est trop souvent &gt; 16ms (1/60), le moteur offthread ou throttle, comme rAf : un 30fps fluide est meilleur qu'un 60fps qui drop</p>
 				<small>60fps est une limite basse, l'iPad Pro est à 120Hz, l'Oculus/Vive à 90hz</small>
 				<br>
 				<small>mais Apple <a href="https://github.com/WebKit/webkit/blob/master/Source/WebCore/page/RenderingUpdateScheduler.cpp">limite à 60fps</a></small>
 			</section>
 
 			<section>
-				<p>Jouer avec le temps, animer des éléments distincts</p>
+				<p>Jouer avec le temps, animer des éléments liés ou distincts</p>
 				<p><img src="tars.jpg" alt=""></p>
-				<small>Ne pas voir ça comme de la sci-fi complexe. La clef est la timeline.</small>
+				<small>Ne pas voir ça comme de la sci-fi complexe. La clef est toujours la timeline.</small>
 				<small>Penser en distance relative au temps : km/h, m/s</small>
+			</section>
+
+			<section>
+				<p>⌛ Le temps peut être altéré par une autre unité libre ⌛</p>
+				<p class="fragment fade-up"><a href="https://majido.github.io/houdini-samples/animation-worklet/touch-input/drag.html">Superbe démo : le temps basé sur un deltaX d'un CSS Pointer Event</a></p>
+				<p class="fragment fade-up"><img src="incep.png" alt=""></p>
 			</section>
 
 			<section>
