--- a/laurentperez.fr/talks/css1/index.html
+++ b/laurentperez.fr/talks/css1/index.html
@@ -220,7 +220,7 @@ CSS.registerProperty({
 				<p class="fragment fade-up">Une des propriétés CSS mappées change</p>
 				<p class="fragment fade-up">La géométrie de l'élément peint change (ex:resize)</p>
 				<p class="fragment fade-up">La timeline bouge (ex:scroll, demo plus loin)</p>
-				<p class="fragment fade-up">Une Worklet va peindre à <em>chaque frame, au minimum à 60fps</em></p>
+				<p class="fragment fade-up">Une Worklet va peindre à <em>chaque frame, et viser le 60fps</em></p>
 				<p class="fragment fade-up">C'est un WebWorker en plus léger, câblé directement sur le moteur CSS. Voir ça un peu comme un layer Photoshop </p>
 			</section>
 
