--- a/laurentperez.fr/talks/css1/index.html
+++ b/laurentperez.fr/talks/css1/index.html
@@ -88,22 +88,22 @@
 				<p>C'est une boite à outils sur CSS. OK ...</p>
 				<p class="fragment fade-up"><blockquote class="fragment fade-up">" Like 10000 spoons when all you need is a knife ". Ironic</blockquote></p>
 				<p class="fragment fade-up">Ca te donne de quoi construire ton couteau si tu n'en avais pas</p>
-				<p class="fragment fade-up">Et si tu en avais, ça te permet de mieux l'utiliser, le polir, l'améliorer, ou prototyper une alternative, variation</p>
+				<p class="fragment fade-up">Et si tu en avais, ça te permet de mieux l'utiliser, le polir, l'améliorer, ou prototyper une alternative, variation, polyfiller une idée</p>
 				<p class="fragment fade-up">Artisanat, outil sans limites ou presque. Presque*, c'est pas open bar total</p>
 			</section>
 
 			<section>
-				<h2>Qui te donne le couteau ?</h2>
+				<h2>Qui te donne - ou pas - le couteau ?</h2>
 				<p class="fragment fade-up">Les fabricants de navigateurs, et de librairies - toi compris !</p>
-				<p class="fragment fade-up">Houdini, la reine des neiges dans ton navigateur</p>
+				<p class="fragment fade-up">Houdini, la reine des neiges dans ton navigateur ❄️</p>
 				<p class="fragment fade-up">Libéré(e), délivré(e) de contraintes du moteur ou limites/bugs des librairies tierces</p>
-				<p class="fragment fade-up">... ça t'empêche pas de commit sur un tiers OSS si tu sais/peux/veux le faire</p>
-				<small class="fragment fade-up">Dans un slide on cite une princesse, une arme blanche, de l'OSS, 2 des GAFA. Joyeux bordel Tarantinesque. Mais pas Charles Manson, alors tout va bien</small>
+				<p class="fragment fade-up">... ça t'empêche pas de commit sur un tiers OSS si tu sais/peux/veux le faire, ou trouver des compromis créas</p>
+				<small class="fragment fade-up">Dans un slide on cite une princesse Disney, une arme blanche, de l'OSS, 2 des GAFA. Joyeux bordel Tarantinesque. Tout va bien</small>
 			</section>
 
 			<section>
 				<p><img src="pai.jpg" width="600px" alt=""></p>
-				<p>Question : où est ton client, ton créa, ton navigateur, ton budget, ta deadline, ton/ta collègue super doué(e), ton mentor... toi ?</p>
+				<p>Question : où est ton client, ton créa, ton navigateur, ton budget, ta deadline, ton/ta collègue super doué(e) qui t'aide en front, ton mentor, jQuery, ton DOM ... toi ?</p>
 				<p class="fragment fade-up">Ce qui se passe dans ton code reste dans ton code. Nope. Pense aux autres, c'est !important</p>
 			</section>
 
@@ -118,9 +118,10 @@
 			</section>
 
 			<section>
-				<p>Dans une maquette, 80% est "facile"</p>
-				<p>C'est quand le moteur ne te donne pas les autres 20% que la recherche commence (toi, tes collègues, google, stackoverflow, ...)</p>
+				<p>Dans une maquette, 70% est "facile" - relatif à l'expérience de chacun(e)</p>
+				<p>C'est quand le moteur ne te donne pas les autres 30% que la recherche commence (toi, tes collègues, google, stackoverflow, ...)</p>
 				<p>Houdini = moins de galères, moins de "on peut pas le faire en CSS / pur web"</p>
+				<p class="fragment fade-up">Ce n'est pas un remplaçant à WebGL. C'est <a href="https://en.wikipedia.org/wiki/WebGPU">WebGPU</a> qui remplacera WebGL</p>
 			</section>
 
 			<section>
@@ -131,7 +132,7 @@
 					<li class="fragment fade-up">CSSOM API (CAPI)</li>
 					<li class="fragment fade-up">Properties/Values API (PVAPI)</li>
 					<li class="fragment fade-up">Paint API (PAPI)</li>
-					<li class="fragment fade-up">Worklet Animation API (WAPI)</li>
+					<li class="fragment fade-up">Worklet Animation API (WAPI ...sur WAAPI)</li>
 					<li class="fragment fade-up">Layout API (LAPI)</li>
 					<li class="fragment fade-up">Font Metrics API (FMAPI) *</li>
 					</ul>
@@ -183,8 +184,10 @@ el.attributeStyleMap.delete('opacity')
 el.attributeStyleMap.clear();
 CSS.vw('100'); CSS.px(42);
 CSS.percent('10'); CSS.ms(300);
-new CSSMathSum(CSS.vw(100), CSS.px(-10)) // calc(100vw + -10px)
-new CSSStyleValue.parse('transform', 'translte3d(...)'); // throw
+new CSSMathSum(CSS.vw(100), CSS.px(-10))
+// calc(100vw + -10px)
+new CSSStyleValue.parse('transform', 'translte3d(...)');
+// typo throw
 				</code></pre>
 			</section>
 
@@ -250,10 +253,11 @@ CSS.registerProperty({
 				<pre class="fragment fade-up"><code class="css">
 /* nos Properties CSS custom (ici, number)*/
 --gear: 3;
---speed: 81;
+--speed: 81; /* si pas set, initialValue, ici 0 */
 --pos: 16;
 --laptime: 7.28;
---rpm: 6000; /* jauge rectangle en Ferrari, arc rectangles en Motec */
+--rpm: 6000;
+/* jauge rectangle en Ferrari, arc rectangles en Motec */
 				</code></pre>
 				<img src="488.jpeg" width="350px" alt="">
 				<img src="motec.jpeg" width="350px" alt="">
