--- a/laurentperez.fr/talks/css1/index.html
+++ b/laurentperez.fr/talks/css1/index.html
@@ -48,30 +48,40 @@
 				
 				<section>
 					<p>Meetup AFUP / Web Front</p>
-					<p>"Le moteur CSS sous stéroides avec la magie d'Houdini"</p>
+					<p>"Le moteur CSS enrichi par la magie d'Houdini"</p>
 					<p>Dessin et animations nouvelle génération, et plus encore</p>
 					<p><img src="awe.png" alt=""></p>
 					<p><img src="mth.jpg" width="30px"/></p>
 					<small>laurentperez.fr/talks/css1</small>
 				</section>
 				<!--
-					Le moteur CSS sous stéroides avec la magie Houdini
-					Dessin et animation nouvelle génération
-					Houdini est un nouveau jeu de fonctions qui donne
-					un accès direct au moteur CSS via JS, permettant de dessiner
-					ou d'animer sans librairie tierce, et bien plus encore.
-					Les travaux ont débuté en 2016 et il arrive aujourd'hui 
-					à maturation
-					Le talk présente toutes les nouvelles fonctions
-					Avec démos à la clé !
+
+					Le moteur CSS enrichi par la magie d'Houdini
+					Pour du dessin et animations nouvelle génération... et plus encore
+
+					Le meetup AFUP est notre hôte à titre exceptionnel pour ce 1er talk 
+					entièrement dédié au frontend Web/CSS/JS, et quel meilleur sujet qu'Houdini, 
+					une nouvelle boîte à outils initiée par Google, Apple et Mozilla ?
+
+					Houdini ouvre les portes du moteur CSS aux développeurs.ses frontend mais également
+					aux créas, avec à la clef un jeu étendu de possibilités de dessin, d'animation, 
+					et même de layout.
+
+					Le talk présente toutes ces nouvelles possibilités
+					Avec surtout des démos de cas d'usages réels à la clé !
 
 				-->
+				<section>
+					<h2>Notre hôte</h2>
+					<p>... votre speaker</p>
+					<h2>... et vous !</h2>
+				</section>
 
 				<section>
 					<h2>Toi, public</h2>
-					<p>Qui fait du front/UI/animation/print/TV ?</p>
-					<p>Ratio natif iOS/Android (hors WebViews) &amp; web/print/vidéo ?</p>
-					<p>Exemples de dernières demandes créas complexes ?</p>
+					<p class="fragment fade-up">Qui fait du front/UI/animation/print/vidéo ?</p>
+					<p class="fragment fade-up">Ratio natif iOS/Android (hors WebViews) &amp; web pur ?</p>
+					<p class="fragment fade-up">Exemples de dernières demandes clientes ou créas complexes ?</p>
 				</section>
 
 			<section>
@@ -274,7 +284,7 @@ CSS.registerProperty({
 
 			<section>
 				<p>Encore une API d'animation ?</p>
-				<small>... on a déjà CSS transitions, CSS animations (@keyframes), la Web Animations API sans CSS (el.animate({...}).pause())</small>
+				<small>... on a déjà CSS transitions, CSS animations (@keyframes), Web Animations API sans CSS (el.animate({...}).pause())</small>
 				<p class="fragment fade-up">NON. La Worklet est une <em>extension</em> de WAAPI qui donne un <em>KeyframeEffect</em>, des <em>timelines</em> libres (dont une <em>ScrollTimeline</em>) et un état optionel (stateful)</p>
 				<p class="fragment fade-up">ex: se souvenir de l'état pour le modifier/partager dans le temps, ou quand le moteur bouge la Worklet entre threads</p>
 				<p class="fragment fade-up">ex: accélérer/distordre le temps (document.timeline modifiable)</p>
@@ -346,7 +356,7 @@ CSS.registerProperty({
 				<p class="fragment fade-up">Les blocs Fragments sont _parallélisables_ pour les moteurs next-gen (LayoutNG CR, WebRender FF) : quand le 4bar rentre et 'flashe' un Tetris, 4 lignes sont à effacer, et y-4 pour au dessus</p>
 				<p class="fragment fade-up">Cas d'usage : architecture, UI normés (affichage dash militaire/industriel, presse écrite, eBooks, ePub Comics)</p>
 				<small class="fragment fade-up">des utilisaturs.trices de QuarkXPress/InDesign ?</small>
-				<p><a href="https://css-houdini.rocks/masonry/">demo</a></p>
+				<p><a href="../cssp">demo</a></p>
 			</section>
 
 			<section>
