--- a/laurentperez.fr/talks/css1/index.html
+++ b/laurentperez.fr/talks/css1/index.html
@@ -80,7 +80,7 @@
 				<section>
 					<h2>Toi, public</h2>
 					<p class="fragment fade-up">Qui fait du front/UI/animation/print/vidéo ?</p>
-					<p class="fragment fade-up">Ratio natif iOS/Android (hors WebViews) &amp; web pur ?</p>
+					<p class="fragment fade-up">Ratio natif iOS/Android/autre (hors WebViews) &amp; web pur ?</p>
 					<p class="fragment fade-up">Exemples de dernières demandes clientes ou créas complexes ?</p>
 				</section>
 
@@ -108,12 +108,12 @@
 				<p class="fragment fade-up">Houdini, la reine des neiges dans ton navigateur ❄️</p>
 				<p class="fragment fade-up">Libéré(e), délivré(e) de contraintes du moteur ou limites/bugs des librairies tierces</p>
 				<p class="fragment fade-up">... ça t'empêche pas de commit sur un tiers OSS si tu sais/peux/veux le faire, ou trouver des compromis créas</p>
-				<small class="fragment fade-up">Dans un slide on cite une princesse Disney, une arme blanche, de l'OSS, 2 des GAFA. Joyeux bordel Tarantinesque. Tout va bien</small>
+				<small class="fragment fade-up">On cite une princesse Disney, une arme blanche, de l'OSS, 2 des GAFA. Joyeux bordel Tarantinesque. Tout va bien</small>
 			</section>
 
 			<section>
 				<p><img src="pai.jpg" width="600px" alt=""></p>
-				<p>Question : où est ton client, ton créa, ton navigateur, ton budget, ta deadline, ton/ta collègue super doué(e) qui t'aide en front, ton mentor, jQuery, ton DOM ... toi ?</p>
+				<p>QCM : où est ton client, ton créa, ton navigateur, ton budget, ta deadline, ton/ta collègue super doué(e) qui t'aide en front, ton mentor, jQuery, ton DOM, ta CSS ... toi ?</p>
 				<p class="fragment fade-up">Ce qui se passe dans ton code reste dans ton code. Nope. Pense aux autres, c'est !important</p>
 			</section>
 
