--- a/laurentperez.fr/talks/css1/index.html
+++ b/laurentperez.fr/talks/css1/index.html
@@ -108,7 +108,7 @@
 				<p class="fragment fade-up">Houdini, la reine des neiges dans ton navigateur ❄️</p>
 				<p class="fragment fade-up">Libéré(e), délivré(e) de contraintes du moteur ou limites/bugs des librairies tierces</p>
 				<p class="fragment fade-up">... ça t'empêche pas de commit sur un tiers OSS si tu sais/peux/veux le faire, ou trouver des compromis créas (chifoumi ?)</p>
-				<small class="fragment fade-up">On cite MTV, une princesse Disney, une arme blanche, de l'OSS, 2 des GAFA. Joyeux bordel Tarantinesque. Tout va bien</small>
+				<small class="fragment fade-up">On cite un hit musical, une princesse Disney, une arme blanche, de l'OSS, 2 des GAFA. Joyeux bordel Tarantinesque. Tout va bien</small>
 			</section>
 
 			<section>
